[gd_scene load_steps=4 format=3 uid="uid://da3tx3eso350f"]

[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_el12f"]
[ext_resource type="Theme" uid="uid://drq31mtyljl06" path="res://Themes/main_menu.tres" id="2_0417a"]

[sub_resource type="LabelSettings" id="LabelSettings_rcu3y"]
font_size = 50

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_el12f")
action_items = Array[String](["move_up", "move_left", "move_down", "move_right", "shoot"])

[node name="MainUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0417a")

[node name="MarginContainer" type="MarginContainer" parent="MainUi"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainUi/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MainUi/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Ammo" type="Label" parent="MainUi/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ammo: THERE IS NONE!!"
label_settings = SubResource("LabelSettings_rcu3y")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0417a")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsGridContainer" type="GridContainer" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MasterLabel" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "MUSIC"

[node name="MusicSlider" type="HSlider" parent="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_pause_menu_visibility_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="PauseMenu/MarginContainer/VBoxContainer/SettingsGridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
